--- a/modified.css
+++ b/modified.css
@@ -1,1 +1,1 @@
-#content {background-color:blue;height:328px;width:694px;font-style:normal;font-family:Verdana,Arial,Helvetica,Sans-Serif;font-size:12px;color:rgb(0, 0, 0);}#content {background-color:red;height:322px;width:688px;font-style:normal;font-family:Verdana,Arial,Helvetica,Sans-Serif;font-size:12px;color:rgb(0, 0, 0);}
+#content {background-color:#FCC;height:328px;width:694px;font-style:normal;font-family:Verdana,Arial,Helvetica,Sans-Serif;font-size:12px;color:rgb(0, 0, 0);}
