--- a/modified.css
+++ b/modified.css
@@ -1,1 +1,1 @@
-#content {background-color:#FCC;height:328px;width:694px;font-style:normal;font-family:Verdana,Arial,Helvetica,Sans-Serif;font-size:12px;color:rgb(0, 0, 0);}
+#content {background-color:#ffc;height:268px;width:634px;font-style:normal;font-family:Verdana,Arial,Helvetica,Sans-Serif;font-size:12px;color:rgb(0, 0, 0);}#header {background-color:#ffc;height:122px;width:969px;font-style:normal;font-family:Verdana,Arial,Helvetica,Sans-Serif;font-size:12px;color:rgb(0, 0, 0);}
